syntax = "proto3";

package todoDemo;

option go_package = "api/v1demo/todogrpc";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/http.proto";

service TodoMamagement {
  rpc CreateTodoItem (CreateTodo) returns (Todo) {
    option (google.api.http) = {
      post: "/v1/todo",
      body: "*",
    };
  }
  rpc GetTodoLists (google.protobuf.Empty) returns (TodoList) {
    option (google.api.http) = {
      get: "/v1/todo",
    };
  }

  rpc GetTodoItemById (TodoId) returns (Todo) {
    option (google.api.http) = {
      get: "/v1/todo/{id}",
    };
  }

  rpc UpdateTodoItem (Todo) returns (Todo) {
    option (google.api.http) = {
      put: "/v1/todo/{id}",
      body: "*",
    };
  }

  rpc DeleteTodoItem (TodoId) returns (ConfirmMessage) {
    option (google.api.http) = {
      delete: "/v1/todo/{id}",
    };
  }
}

message Todo {
  string name = 1;
  int32 id = 2;
}


message TodoList {
  repeated Todo todos =1;
}


message CreateTodo {
  string name = 1;
}


message ConfirmMessage {
  string message = 1;
}

message TodoId {
  int32 id = 1;
}

